[tool.poetry]
name = "api-clients"
version = "0.0.1"
description = "API clients and Live Docs for Fetch AI's services' API"
authors = ["Xavier <xavier.peiro@fetch.ai>"]
readme = "README.md"
#packages = [{include = "api-clients", from="src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
